--- a/style.css
+++ b/style.css
@@ -1,21 +1,36 @@
+body {
+  background-color: blueviolet;
+  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: "Lucida Console", Courier, monospace; */
+}
+
 .players {
+  margin: 0 auto;
   max-width: 710px;
   display: flex;
   justify-content: space-between;
   text-align: center;
-
- }
+}
 
 .history {
   display: flex;
   flex-direction: column-reverse;
 }
 button {
-  margin: 1px;
-  margin-bottom: 3px;
+  margin: 2px;
+  margin-bottom: 4px;
   outline: none;
+  border-color: none;
+  border-radius: 6px;
+  border: 3px solid #f08b43;
+
+  background: #f08b43;
 }
 h3 {
   margin: 10px;
- 
+  font-size: 30px;
+}
+form {
+  text-align: center;
 }
