--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
-  background-color: blueviolet;
+  background-color: #04041f;
   font-family: "Times New Roman", Times, serif;
   font-family: Arial, Helvetica, sans-serif;
+  color: darkcyan;
   /* font-family: "Lucida Console", Courier, monospace; */
 }
 
@@ -20,17 +21,41 @@ body {
 button {
   margin: 2px;
   margin-bottom: 4px;
+  height: 28px;
+  width: 44px;
   outline: none;
   border-color: none;
   border-radius: 6px;
-  border: 3px solid #f08b43;
-
-  background: #f08b43;
+  border: 2px solid darkcyan;
+  color: darkcyan;
+  font-weight: 400;
+  background: #04041f;
 }
+button:active {
+  background: darkcyan;
+  color: #04041f;
+}
+
 h3 {
   margin: 10px;
   font-size: 30px;
 }
 form {
   text-align: center;
+}
+
+
+
+
+@media only screen and (max-width: 676px) {
+  button {
+    height: 24px;
+    width: 36px;
+  }
+}
+@media only screen and (max-width: 624px) {
+  button {
+    height: 20px;
+    width: 35px;
+  }
 }
