--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #04041f;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Times New Roman', Times, serif;
   font-family: Arial, Helvetica, sans-serif;
   color: darkcyan;
   /* font-family: "Lucida Console", Courier, monospace; */
@@ -8,7 +8,9 @@ body {
 
 .players {
   margin: 0 auto;
-  max-width: 710px;
+  max-width: 740px;
+  min-width: 722px;
+
   display: flex;
   justify-content: space-between;
   text-align: center;
@@ -44,9 +46,6 @@ form {
   text-align: center;
 }
 
-
-
-
 @media only screen and (max-width: 676px) {
   button {
     height: 24px;
@@ -58,4 +57,8 @@ form {
     height: 20px;
     width: 35px;
   }
+}
+
+.remove {
+  background-color: darkred;
 }
